--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -50,8 +50,8 @@ nav ul li a {
 .footer {
     background-color: #333;
     color: #fff;
-    padding: 5px;
     text-align: center;
+    height:5%;
     position: fixed;
     width: 100%;
     bottom: 0;
@@ -60,23 +60,21 @@ nav ul li a {
 
 #roomNumberDiv{
     width:25%;
-    height:3%;
+    height:1.5%;
     position: fixed;
-    bottom:15%;
+    bottom:10%;
     z-index: 1000;
     margin: 0 auto;
     text-align: center;
     border-top:2px solid #776e42;
 }
-#roomNumberInput{
-    width: 90%;
-    height: 100%;
-    padding: 0.25%;
-    margin: 4px;
-    font-size: 14px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
+#createRoom{
+    width:60%;
+    height: 250%;
+    margin:2%
+
 }
+
 #chatInput{
     width: 90%;
     height: 100%;
@@ -100,3 +98,4 @@ nav ul li a {
 #send{
 
 }
+
