--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -4,13 +4,25 @@ body {
     padding: 0;
 }
 nav {
-    background-color: #60c055;
-    color: #80da0e;
+    background-color: #03a9f4;
+    color: #fff;
     padding: 20px;
     position: fixed;
     width: 100%;
     top: 0;
     z-index: 1000;
+    border-bottom:1px solid rgba(200, 198, 198, 0.82) ;
+    font-size: 15px;
+    display: flex;
+    padding: 20px 20px;
+
+}
+.nav-text{
+    margin-right: 3%;
+    font-size: 20px;
+
+
+
 }
 nav ul {
     list-style-type: none;
@@ -20,22 +32,75 @@ nav ul {
 nav ul li {
     display: inline;
     margin-right: 20px;
+    transition: all 300ms ease
 }
 nav ul li a {
     color: #fff;
     text-decoration: none;
 }
+nav ul li a:hover {
+    text-decoration-color: white;
+
+    text-decoration: underline;
+    text-underline-offset: 1rem;
+    text-decoration-color: #fff;
+}
+
 .container {
     display: flex;
     min-height: 100vh;
     padding-top: 50px;
 }
+.left-section h2{
+    color: #fff;
+    background: #03a9f4;
+    padding: 10px 20px;
+    font-size: 20px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    margin-top: 0px;
+
+}
+.left-section ul li{
+    list-style: none;
+    padding: 10px;
+    width: 100%;
+    box-shadow: 0 5px 25px rgba(0, 0, 0, .1);
+    transition: 0.5s;
+    cursor: pointer;
+    margin-top: 0px;
+
+
+}
+.rooms li:hover{
+    transform: scale(1.1);
+    z-index: 100;
+    background: #25bcff;
+    box-shadow: 0 5px 25px rgba(0, 0, 0, .1);
+    color: #fff;
+
+}
+
+
+#addRooms, #addUsers{
+    position: relative;
+    background:#fff;
+    margin-top: 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
+
+}
 .left-section{
     flex: 1;
-    background-color: #c4e0a0;
+    background-color: #f6f6f6;
     overflow-y: auto;
-    border: 2px solid #58b61a;
-    border-radius: 10px;
+
+    border: 1px solid rgba(200, 198, 198, 0.82);
+    width: 300px;
+    overflow-x: hidden;
+    margin-top: 0.8%;
 }
 .right-section {
     flex: 1;
@@ -60,18 +125,44 @@ nav ul li a {
 
 #roomNumberDiv{
     width:25%;
-    height:1.5%;
-    position: fixed;
-    bottom:10%;
-    z-index: 1000;
+    height:15%;
+    width: 100%;
     margin: 0 auto;
     text-align: center;
-    border-top:2px solid #776e42;
+    border-top:1px solid rgba(200, 198, 198, 0.82) ;
+    border-bottom:1px solid rgba(200, 198, 198, 0.82) ;
+    margin-bottom: 2%;
 }
 #createRoom{
-    width:60%;
-    height: 250%;
-    margin:2%
+    width:70%;
+    height: 30px;
+
+    margin: 2%;
+    color: #fff;
+    background: #03a9f4;
+
+    font-size: 15px;
+    border:  solid ;
+    border-radius: 20px;
+    cursor: pointer;
+
+    transition: 0.5s;
+
+}
+#createRoom:hover{
+    width:70%;
+    height: 30px;
+    color: #03a9f4;
+    background: #fff;
+
+    font-size: 15px;
+    border:  solid ;
+    border-radius: 20px;
+    cursor: pointer;
+
+
+    transform: scale(1.1);
+    border-color: #fff;
 
 }
 
@@ -105,5 +196,3 @@ nav ul li a {
 
     overflow-y: auto;
 }
-
-
