Divided username and timestamp from msg to improve readability

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -196,3 +196,28 @@ nav ul li a:hover {
 
     overflow-y: auto;
 }
+
+.messageHeader{
+    height: 4vh;
+    display: flex;
+    align-items: baseline;
+
+
+}
+.userName{
+    color: darkred;
+    font-size: large;
+
+
+}
+
+.timeStamp{
+    color: dimgrey;
+    font-size: x-small;
+
+}
+
+
+
+
+
