dar-mode color fixed, improve background and add animation to buttons

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -56,8 +56,7 @@ nav ul li a:hover {
     background: #03a9f4;
     padding: 10px 20px;
     font-size: 20px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+
     margin-top: 0px;
 
 }
@@ -69,6 +68,7 @@ nav ul li a:hover {
     transition: 0.5s;
     cursor: pointer;
     margin-top: 0px;
+    color: #03a9f4;
 
 
 }
@@ -104,13 +104,17 @@ nav ul li a:hover {
 }
 .right-section {
     flex: 1;
-    background-color: #debe7a;
+    background-color: #03a9f4;
     overflow-y: auto;
-    border: 2px solid #776e42;
-    border-radius: 10px;
+    /*border: 2px solid #776e42;
+    border-radius: 10px;*/
 }
 .right-section{
     flex:3;
+
+    background-color: #03a9f4;
+
+    
 }
 .footer {
     background-color: #333;
@@ -149,6 +153,32 @@ nav ul li a:hover {
     transition: 0.5s;
 
 }
+.btn, #send{
+
+    color: #03a9f4;
+    background:#fff ;
+
+    border:  solid ;
+    border-radius: 20px;
+    cursor: pointer;
+
+    transition: 0.5s;
+padding: 8px;
+}
+.btn:hover, #send:hover{
+    color: #fff;
+    background: #03a9f4;
+
+
+    border:  solid ;
+    border-radius: 20px;
+    cursor: pointer;
+
+
+    transform: scale(1.1);
+    border-color: #03a9f4;
+
+}
 #createRoom:hover{
     width:70%;
     height: 30px;
@@ -172,8 +202,8 @@ nav ul li a:hover {
     padding: 2px;
     margin: 2px;
     font-size: 14px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
+   /* border: 1px solid #ccc;
+    border-radius: 3px;*/
 }
 #chatInputDiv{
     width:75%;
@@ -184,17 +214,19 @@ nav ul li a:hover {
     z-index: 1000;
     margin: 0 auto;
     text-align: center;
-    border-top:2px solid #776e42;
+   /* border-top:2px solid #776e42;*/
 }
 #send{
 
 }
 .messageArea{
-    background-color: lightblue;
+
     width: 150vh; /* Set the width of the div */
     height: 60vh;
 
     overflow-y: auto;
+    margin-left: 2%;
+
 }
 
 .messageHeader{
@@ -205,7 +237,7 @@ nav ul li a:hover {
 
 }
 .userName{
-    color: darkred;
+    color: #25bcff;
     font-size: large;
 
 
@@ -233,18 +265,58 @@ body.dark-mode .left-section, body.dark-mode .right-section, body.dark-mode foot
 }
 
 body.dark-mode nav ul li a {
+    color:#e0e0e0;
+}
+body.dark-mode .left-section ul li  {
+    background-color: #333;
     color: #e0e0e0;
+    border: solid;
+
+    border-color: #333;
+
+}
+ body.dark-mode .rooms li:hover {
+    background: #e0e0e0;
+     border-color: #e0e0e0;
+     color: black;
+
 }
 
-body.dark-mode .left-section ul li:hover, body.dark-mode .rooms li:hover {
-    background: #333;
-}
-
-body.dark-mode #createRoom, body.dark-mode #createRoom:hover {
+body.dark-mode #createRoom {
     background: #333;
     color: #e0e0e0;
-    border-color: #e0e0e0;
+    border: solid;
+    border-radius: 20px;
+    border-color: #333;
+
 }
+ body.dark-mode #createRoom:hover{
+     background:#e0e0e0;
+     color: #333;
+
+
+ }
+body.dark-mode .userName, body.dark-mode .timeStamp, body.dark-mode #messageArea, body.dark-mode #roomMessage,body.dark-mode p
+{
+    color: #e0e0e0;
+}
+.userName,  .timeStamp,  #messageArea,  #roomMessage, p{
+    color: white;
+}
+body.dark-mode .btn ,body.dark-mode #send{
+    background: #333;
+    color: #e0e0e0;
+    border: solid;
+    border-radius: 20px;
+    border-color: #333;
+
+}
+body.dark-mode .btn:hover,body.dark-mode #send:hover{
+    background:#e0e0e0;
+    color: #333;
+
+}
+
 
 
 
