--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -191,45 +191,58 @@ nav ul li a:hover {
 }
 .messageArea{
     background-color: lightblue;
-    width: 150vh; /* Set the width of the div */
+    width: 150vh;
     height: 60vh;
-
     overflow-y: auto;
+    padding-left: 2%;
 }
 
 .messageHeader{
-    height: 4vh;
     display: flex;
     align-items: baseline;
-
+    font-size: large;
 
 }
 .userName{
-    color: darkred;
-    font-size: large;
-
-
+    font-size: x-large;
+    color: #640303;
+    font-weight: bold;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
 }
 
 .timeStamp{
     color: dimgrey;
-    font-size: x-small;
+    font-size: small;
+    color: #0d32ad;
+    padding: 0.5%;
 
 }
 
-/* Dark Theme Styles */
+
 body.dark-mode {
     background-color: #121212;
-    color: #e0e0e0;
+    color: #931818;
 }
 
 body.dark-mode nav {
     background-color: #1f1f1f;
 }
 
-body.dark-mode .left-section, body.dark-mode .right-section, body.dark-mode footer {
+body.dark-mode .left-section {
     background-color: #242424;
-    color: #e0e0e0;
+    color: #651414;
+}
+body.dark-mode.footer{
+    color: #f5e9e9;
+}
+body.dark-mode.left-section.messageArea{
+    background-color: #242424;
+    color:white;
+}
+
+body.dark-mode .right-section{
+    color: #4b43a8;
+    background-color: #242424;
 }
 
 body.dark-mode nav ul li a {
@@ -237,13 +250,22 @@ body.dark-mode nav ul li a {
 }
 
 body.dark-mode .left-section ul li:hover, body.dark-mode .rooms li:hover {
-    background: #333;
+    background: #6150b0;
 }
 
 body.dark-mode #createRoom, body.dark-mode #createRoom:hover {
     background: #333;
     color: #e0e0e0;
     border-color: #e0e0e0;
+}
+
+#joiningMessage{
+    margin: 5px 0;
+    max-height: 300px;
+    text-align:-webkit-center;
+    padding: 10px;
+    color:green;
+    font-weight: bold;
 }
 
 
